# gh-proxy

./: .dockerignore  .gitignore  Dockerfile  README.md  black_list  blacklist_rules  docker-compose.yaml  forbidden.html  index.html  kill.sh  pyproject.toml  run_app.bat  run_app.sh  run_in_screen.sh
.claude/: settings.local.json
app/: main.py
resources/: README.md  passlist_rules  whitelist_rules
scripts/: kill.sh  run_app.bat  run_app.sh  run_in_screen.sh
