[project]
name = "gh-proxy"
version = "1.0.0"
description = "GitHub proxy acceleration service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.0.0",
    "requests==2.31.0",
    "Werkzeug==3.0.1",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
